# ERP-System

./: .env.example  .gitignore  main.py  pyproject.toml  test_app_info.py  test_container.py  test_context.py  test_contracts.py  test_environment.py  test_exception.py  test_host.py  test_ui.py
app/domain/common/: __init__.py  aggregate_root.py  domain_event.py  entity.py  value_object.py
core/application/: __init__.py  application_paths.py  context.py  environment.py  metadata.py  runtime.py
core/container/: __init__.py  service_container.py
core/contracts/: __init__.py  dialog_contract.py  logger_contract.py  page_contract.py  repository_contract.py  service_contract.py  settings_contract.py  window_contract.py
core/framework/bootstrap/: __init__.py  bootstrap.py  service_registry.py
core/framework/exceptions/: __init__.py  api_exception.py  application_exception.py  base_exception.py  database_exception.py  exception_handler.py  validation_exception.py
core/framework/host/: __init__.py  application_host.py
core/framework/logging/: __init__.py  logger.py
core/framework/navigation/: __init__.py  navigation_manager.py  page_registry.py  route.py
core/framework/settings/: settings_model.py
core/framework/ui/: __init__.py
core/framework/ui/dialogs/: __init__.py  base_dialog.py
core/framework/ui/pages/: __init__.py  base_page.py
core/framework/ui/sidebar/: __init__.py  sidebar.py  (+2 more)
core/logging/: logger.py
core/settings/: __init__.py  settings_manager.py
docs/architecture/adr/: ADR-0001-project-architecture.md
modules/shell/: main_window.py
(+4 files in other folders)
