```toml
[project]
name = "orm-repair-erp"
version = "1.0.0"
description = "Professional Repair Management ERP"
requires-python = ">=3.12"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "UP"
]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
```
